Fix gaps below bar.
Allow bar to hold place and adjust size with CSS.

We use position: sticky; for sticky bars instead of position: fixed;.
We no longer need to hold space back for admin bar either.

--- a/assets/scss/bar.scss
+++ b/assets/scss/bar.scss
@@ -138,17 +138,11 @@ $mobile_max: 580px;
 	.mctb {
 		z-index: 99998;
 	}
-
-	.mctb-position-top {
-		top: 32px;
-        @media screen and (max-width: 782px) {
-            top: 46px;
-        }
-	}
+    
 }
 
 .mctb {
-	position: absolute;
+	position: relative;
 	top: 0;
 	left: 0; right: 0;
 	width: 100%;
@@ -166,11 +160,12 @@ $mobile_max: 580px;
 }
 
 .mctb-sticky {
-	position: fixed;
+	position: sticky;
+    top: 0;
 }
 
 .mctb-position-bottom {
-	position: fixed;
+	position: sticky;
 	bottom: 0;
 	top: auto;
 
